--- a/src/components/payment/styles/PaymentForm.module.css
+++ b/src/components/payment/styles/PaymentForm.module.css
@@ -13,3 +13,15 @@
     justify-content: space-between;
     align-items: center;
 }
+.success {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    margin-top: 50px;
+}
+.success h2 {
+    color: #829fff;
+}
+.success button {
+}
