--- a/src/components/topbar/styles/TopbarTop.module.css
+++ b/src/components/topbar/styles/TopbarTop.module.css
@@ -29,21 +29,25 @@
 .search div {
     width: 500px;
     height: 40px;
-    background: #ddd;
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid rgb(119, 119, 119);
 }
 
 .search div input {
-    width: 100%;
+    flex: 9;
     height: 100%;
-    padding: 5px;
-    font-size: 20px;
+    padding: 0px 15px;
+    font-size: 18px;
+    color: #777777;
+    font-weight: 300;
+    border: none;
+    outline: none;
 }
 .search div button {
-    position: absolute;
+    flex: 3;
     right: 0;
     border: none;
-    width: 100px;
     height: 100%;
     background: tomato;
     color: #fff;
