--- a/src/index.css
+++ b/src/index.css
@@ -29,5 +29,15 @@ a {
     color: #fff;
     border: none;
     cursor: pointer;
-    margin-bottom: 15px;
+}
+
+/* Disalbed button */
+.disableButton {
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 10px 28px;
+    color: #fff;
+    border: none;
+    background-color: rgba(255, 99, 71, 0.438) !important;
+    cursor: not-allowed !important;
 }
