--- a/src/components/topbar/styles/Topbar.module.css
+++ b/src/components/topbar/styles/Topbar.module.css
@@ -7,3 +7,13 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
         rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
+
+.show {
+    transform: translateY(-100%);
+    transition: transform 0.4s;
+}
+
+.hidden {
+    transform: translateY(0);
+    transition: transform 0.4s;
+}
