--- a/src/components/cart/styles/CartItem.module.css
+++ b/src/components/cart/styles/CartItem.module.css
@@ -1,18 +1,48 @@
 .item {
     display: flex;
-
     border-bottom: 1px solid rgba(68, 68, 68, 0.342);
     padding: 20px 0px;
+    gap: 10px;
 }
 
 .item > div {
-    flex: 2;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 5px;
 }
+.item .one {
+    flex: 4;
+}
+.item .one > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.item .one .iconWrapper {
+    flex: 4;
+}
+.item .one .imgWrapper {
+    flex: 8;
+}
+
+.item .two {
+    flex: 8;
+}
+.item .two .titleWrapper {
+    flex: 3;
+}
+.item .two .threeWrapper {
+    flex: 9;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.item .two .threeWrapper > div {
+    flex: 4;
+    text-align: center;
+}
+
 .item p {
     text-transform: capitalize;
     font-size: 16px;
@@ -30,9 +60,6 @@
     transition: 0.4s;
     cursor: pointer;
 }
-.iconWrapper img {
-    width: 25px;
-}
 
 .imgWrapper {
 }
@@ -43,7 +70,8 @@
 
 .titleWrapper {
 }
-
+.titleWrapper p {
+}
 .priceWrapper {
 }
 
@@ -76,4 +104,60 @@
 }
 .iconWrapper button:hover {
     background-color: #fff;
+}
+
+/* Media Query */
+
+@media (max-width: 1200px) {
+    .titleWrapper p {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 14px;
+    }
+}
+@media (max-width: 768px) {
+    .item .one {
+        flex: 5;
+    }
+    .item .two {
+        flex: 7;
+        flex-direction: column;
+        gap: 15px;
+    }
+    .item .two .threeWrapper {
+        width: 100%;
+    }
+    .titleWrapper {
+        width: 100%;
+        text-align: center;
+    }
+    .titleWrapper p {
+        -webkit-line-clamp: 1;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 576px) {
+    .item {
+        flex-direction: column;
+        margin-bottom: 40px;
+    }
+
+    .item .one .iconWrapper {
+        justify-content: center;
+    }
+    .item .one .imgWrapper {
+        justify-content: flex-start;
+    }
+
+    .titleWrapper {
+        width: 100%;
+        text-align: center;
+    }
+    .titleWrapper p {
+        -webkit-line-clamp: 2;
+    }
 }
