--- a/src/components/cart/styles/CartPage.module.css
+++ b/src/components/cart/styles/CartPage.module.css
@@ -1,5 +1,6 @@
 .cartItem {
     padding-top: 170px;
+    position: relative;
 }
 
 .main {
@@ -11,16 +12,21 @@
     border-right: 1px solid rgba(68, 68, 68, 0.342);
     padding: 20px;
 }
-.cartItems > h3 {
+.head {
+}
+.head h3 {
     font-size: 30px;
-    font-weight: 300;
+    font-weight: 600;
     margin: 20px 0px;
 }
 
 .updateButton {
     padding: 20px 0px;
-    text-align: right;
+    display: flex;
+    justify-content: right;
+    gap: 10px;
 }
+
 .notFound {
 }
 .notFound h4 {
@@ -30,3 +36,32 @@
 }
 
 /* Hover */
+
+/* Media Query */
+
+@media (max-width: 1200px) {
+    .main {
+        gap: 10px;
+    }
+    .cartItems {
+        width: 70%;
+        padding: 0px;
+    }
+    .head {
+        text-align: center;
+    }
+    .updateButton {
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 992px) {
+    .main {
+        gap: 10px;
+        flex-direction: column;
+    }
+    .cartItems {
+        width: 100%;
+        border-right: none;
+    }
+}
