--- a/src/components/products/styles/AllProlduct.module.css
+++ b/src/components/products/styles/AllProlduct.module.css
@@ -20,6 +20,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 200px));
     gap: 20px;
+    justify-content: center;
 }
 .empty {
     grid-column: 1/-1;
