--- a/src/components/products/styles/NewProduct.module.css
+++ b/src/components/products/styles/NewProduct.module.css
@@ -18,6 +18,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 250px));
     gap: 20px;
+    justify-content: center;
 }
 
 .categories {
