--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,16 @@ a {
     background-color: rgba(255, 99, 71, 0.438) !important;
     cursor: not-allowed !important;
 }
+
+/* Media Query */
+
+@media screen and (max-width: 1400px) {
+    .container {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 90%;
+    }
+}
