--- a/src/components/topbar/styles/TopbarBottom.module.css
+++ b/src/components/topbar/styles/TopbarBottom.module.css
@@ -1,65 +1,75 @@
+.none {
+    display: none !important;
+}
+.block {
+    display: block;
+}
 .navbar {
     background: #fff;
 }
 .main {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 20px 0px;
+    padding: 15px 0px;
     gap: 20px;
 }
 
 /* left */
-.left {
+.nav {
     display: flex;
     align-items: center;
 }
-.left ul {
+.nav > ul {
     display: flex;
     list-style: none;
     gap: 10px;
 }
-.left ul li {
+.nav > ul > li {
+    position: relative;
     font-size: 20px;
     color: #333;
+    display: flex;
+    align-items: center;
 }
-.left ul li a {
+.nav > ul > li > a {
     padding: 5px 10px;
     color: #111;
     cursor: pointer;
 }
 
-/* Right */
-.right {
+.smallDevice {
     display: flex;
-    justify-content: right;
+    gap: 10px;
+    justify-content: space-between;
     align-items: center;
-    gap: 20px;
 }
-.right div {
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    position: relative;
-    width: 50px;
-    height: 50px;
-    background: transparent;
+
+/* Media Query */
+@media screen and (max-width: 992px) {
 }
-.right div span {
-    position: absolute;
-    font-size: 17px;
-    top: -9px;
-    right: -8px;
-    width: 25px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #111;
-    border-radius: 50%;
-    background: #fff;
+@media screen and (max-width: 768px) {
+    .nav {
+        display: block;
+    }
+    .nav > ul {
+        padding: 20px 0px;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        width: 100%;
+        background: #ddd;
+    }
+    .main {
+        display: block;
+    }
 }
-.right div img {
+@media screen and (min-width: 768px) {
+    .smallDevice {
+        display: none;
+    }
 }
