--- a/src/styles/Categories.module.css
+++ b/src/styles/Categories.module.css
@@ -10,12 +10,11 @@
 }
 
 .main {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
 .item {
-    width: 400px;
-    height: 500px;
     overflow: hidden;
     position: relative;
     display: flex;
@@ -25,44 +24,20 @@
     gap: 20px;
     border-radius: 3px;
 }
-.item h4 {
-    font-size: 27px;
-    letter-spacing: 3px;
-    color: #fff;
-    background: #00000061;
-    border-radius: 2px;
-    padding: 10px;
-    transition: visibility 0.3s;
-}
-.item p {
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 1px;
-    font-weight: 300;
-    color: #111;
-    background: #ffffff80;
-    margin: 40px;
-    transition: 0.4s;
-    animation-name: myanim;
-    animation-duration: 5 s;
-    animation-fill-mode: both;
-    animation-iteration-count: infinite;
-}
-.item button {
-    padding: 8px 20px;
-    font-size: 17px;
-    font-weight: 600;
-    background: #fff;
-    cursor: pointer;
-    color: #111;
-    display: none;
+
+.item div {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: burlywood;
+    font-size: 25px;
+    text-align: center;
+    padding: 14px 0px;
+    transition: 0.5s;
 }
 .item img {
     width: 100%;
-    position: absolute;
-    top: 0;
     z-index: -1;
-    left: 0;
     transition: 0.3s;
 }
 
@@ -70,19 +45,26 @@
 .item:hover img {
     transform: scale(1.1);
 }
-/* .item:hover h4 {
-    opacity: 0;
-    visibility: hidden;
-} */
 
-/* .slide-fwd-center {
-	animation: slide-fwd-center 0.45s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite both;
-} */
-@keyframes myanim {
-    0% {
-        transform: translateZ(0);
+.item:hover div {
+    background-color: transparent;
+}
+
+/* Media Query */
+@media (max-width: 992px) {
+    .item div {
+        font-size: 20px;
     }
-    100% {
-        transform: translateZ(160px);
+}
+@media (max-width: 768px) {
+    .item div {
+        font-size: 17px;
+    }
+}
+@media (max-width: 650px) {
+    .main {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
     }
 }
