make responsive and customize topbar

--- a/src/components/payment/styles/OrderSummery.module.css
+++ b/src/components/payment/styles/OrderSummery.module.css
@@ -29,8 +29,20 @@
     font-size: 20px;
     font-weight: 500;
 }
+
 .total {
     display: flex;
     justify-content: space-between;
     font-size: 22px;
+}
+.total h4 {
+    font-weight: 600;
+}
+@media (max-width: 576px) {
+    .summery {
+        text-align: center;
+    }
+    .summery > h4 {
+        font-size: 26px;
+    }
 }
