--- a/src/components/payment/styles/UserForm.module.css
+++ b/src/components/payment/styles/UserForm.module.css
@@ -8,21 +8,12 @@
     grid-column: 1/-1;
 }
 
-.form > div {
-    height: 80px;
+.form > div p {
+    margin-top: 0.25rem;
+    font-size: 0.875em;
+    color: #dc3545;
 }
 
-.form > div p {
-    font-size: 18px;
-    line-height: 30px;
-    color: red;
-    text-align: left;
-    font-weight: 300;
-}
-.form > select {
-    height: 50px;
-    font-size: 18px;
-}
 .form > select option {
 }
 
@@ -30,4 +21,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+/* Media Query */
+
+@media (max-width: 768px) {
+    .form {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+    }
+}
+@media (max-width: 400px) {
+    .buttons {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .buttons button,
+    a {
+        width: 100%;
+    }
 }
