--- a/src/styles/SingleItem.module.css
+++ b/src/styles/SingleItem.module.css
@@ -1,7 +1,7 @@
 .singleItem {
-    width: 70%;
-    margin: auto;
+    width: 100%;
     display: flex;
+    gap: 30px;
     justify-content: space-between;
     padding-top: 50px;
     margin-top: 170px;
@@ -14,6 +14,7 @@
     width: 50%;
     padding: 50px 0px;
     display: flex;
+
     flex-direction: column;
     gap: 20px;
 }
@@ -124,4 +125,49 @@
 
 .counter button:hover {
     background-color: #fff;
+}
+
+/* Media Query */
+
+@media (max-width: 1200px) {
+    .left {
+        width: 50%;
+    }
+    .right .title {
+        font-size: 25px;
+    }
+    .right .price {
+        font-size: 23px;
+    }
+}
+@media (max-width: 768px) {
+    .singleItem {
+        flex-direction: column;
+        align-items: center;
+    }
+    .left,
+    .right {
+        width: 100%;
+    }
+    .colors,
+    .sizes {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+    .right h4 {
+        margin: 0;
+    }
+}
+@media (max-width: 475px) {
+    .right {
+        align-items: center;
+    }
+    .colors,
+    .sizes {
+        flex-direction: column;
+    }
+    .addToCart {
+        flex-direction: column;
+    }
 }
